--- a/PriceKeeperBL/PriceKeeperBL.csproj
+++ b/PriceKeeperBL/PriceKeeperBL.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.21" />
+    <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
